--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -9,6 +9,5 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
- 
+      - name: Run tests
+        run: python src/validate_bts.py
